--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,8 @@
-
-pandas
-scikit-learn
-numpy
-fastapi
-uvicorn
-streamlit
-request
+fastapi==0.95.0
+uvicorn==0.22.0
+scikit-learn==1.2.1
+pandas==1.5.3
+joblib==1.3.1
+pydantic==1.11.1
+streamlit==1.20.0
+requests==2.28.2
