--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-fastapi==0.95.0
-uvicorn==0.22.0
-scikit-learn==1.2.1
-numpy==1.23.5
-pandas==1.5.3
-joblib==1.3.1
-pydantic==1.10.2
-streamlit==1.20.0
-requests==2.28.2
+# fastapi==0.95.0
+# uvicorn==0.22.0
+# scikit-learn==1.2.1
+# numpy==1.23.5
+# pandas==1.5.3
+# joblib==1.3.1
+# pydantic==1.10.2
+# streamlit==1.20.0
+# requests==2.28.2
+fastapi==0.115.8
+uvicorn==0.34.0
+numpy==1.26.4  
+pandas==2.2.3
+scikit-learn==1.6.1
+joblib==1.4.2
+starlette==0.45.3
+pydantic==2.10.6
