--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.25.2
-numpy==1.23.5
+numpy
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
